poc(ci): improve gradle config (#59)